Upgrade Node/NPM dependencies, fix audit vulnerabilities

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "version": "2.8.1",
     "main": "./app.js",
     "engines": {
-        "node": ">=12",
+        "node": ">=14 <17",
         "npm": ">=6 <7"
     },
     "repository": {
@@ -22,6 +22,7 @@
     },
     "contributors": [],
     "scripts": {
+        "preinstall": "pwd && ./scripts/preinstall",
         "start": "node .",
         "test": "grunt test",
         "test-browser": "grunt test-browser",
@@ -46,8 +47,8 @@
         "csurf": "^1.11.0",
         "db.js": "^0.15.0",
         "debug": "^4.3.2",
-        "enketo-core": "5.18.1",
-        "enketo-transformer": "1.43.0",
+        "enketo-core": "git+https://github.com/eyelidlessness/enketo-core.git#node-16-dependency-upgrades",
+        "enketo-transformer": "git+https://github.com/eyelidlessness/enketo-transformer.git#node-16-dependency-upgrades",
         "evp_bytestokey": "^1.0.3",
         "express": "^4.17.1",
         "grunt": "^1.4.1",
@@ -55,14 +56,14 @@
         "grunt-i18next": "^0.2.0",
         "grunt-sass": "^3.1.0",
         "grunt-shell-spawn": "^0.4.0",
-        "i18next": "^20.3.2",
+        "i18next": "^20.3.5",
         "i18next-browser-languagedetector": "^6.1.2",
         "i18next-fs-backend": "^1.1.1",
-        "i18next-http-backend": "^1.2.6",
+        "i18next-http-backend": "^1.3.0",
         "i18next-http-middleware": "^3.1.4",
         "jquery": "^3.6.0",
         "jstransformer-markdown-it": "^2.1.0",
-        "jszip": "^3.6.0",
+        "jszip": "^3.7.1",
         "jwt-simple": "^0.5.6",
         "load-grunt-tasks": "^5.1.0",
         "lodash": "^4.17.21",
@@ -72,10 +73,10 @@
         "papaparse": "^5.3.1",
         "pkg-dir": "^5.0.0",
         "pug": "^3.0.2",
-        "puppeteer": "^10.1.0",
+        "puppeteer": "^10.2.0",
         "redis": "^3.1.2",
         "request": "^2.88.2",
-        "request-filtering-agent": "^1.0.6",
+        "request-filtering-agent": "^1.0.7",
         "serve-favicon": "^2.5.0",
         "time-grunt": "^2.0.0",
         "valid-url": "^1.0.9",
@@ -84,42 +85,42 @@
         "xml2js": "^0.4.23"
     },
     "devDependencies": {
+        "@baladins/grunt-nodemon": "^0.4.6",
         "@types/db.js": "^0.14.7",
         "abortcontroller-polyfill": "^1.7.3",
-        "chai": "^4.3.4",
+        "bootstrap-datepicker": "1.9.0",
         "chai-as-promised": "^7.1.1",
+        "chai": "^4.3.4",
         "docdash": "^1.2.0",
-        "esbuild": "^0.12.15",
         "esbuild-plugin-alias": "^0.1.2",
+        "esbuild": "^0.12.19",
         "eslint-plugin-jsdoc": "^35.4.3",
-        "eslint-plugin-unicorn": "^34.0.1",
+        "eslint-plugin-unicorn": "^35.0.0",
         "grunt-concurrent": "^3.0.0",
         "grunt-contrib-watch": "^1.1.0",
         "grunt-eslint": "^23.0.0",
         "grunt-karma": "^4.0.2",
         "grunt-mocha-test": "^0.13.3",
-        "grunt-nodemon": "^0.4.2",
         "grunt-simple-nyc": "^3.0.1",
-        "i18next-parser": "^2.2.0",
         "istanbul": "^0.4.5",
         "istanbul-reporter-shield-badge": "^1.2.1",
         "jsdoc": "^3.6.7",
         "jsdoc-ts-utils": "^2.0.0",
         "karma": "^6.3.4",
         "karma-chrome-launcher": "^3.1.0",
-        "karma-coverage": "^1.1.2",
+        "karma-coverage": "^2.0.3",
         "karma-esbuild": "^2.2.0",
         "karma-firefox-launcher": "^2.1.1",
         "karma-mocha": "^2.0.1",
         "karma-opera-launcher": "^1.0.0",
         "karma-safari-launcher": "^1.0.0",
         "karma-sinon-chai": "^2.0.2",
-        "mocha": "^9.0.2",
+        "mocha": "^9.0.3",
         "nock": "^13.1.1",
         "rimraf": "^3.0.2",
-        "sinon": "^11.1.1",
+        "sinon": "^11.1.2",
         "sinon-chai": "^3.7.0",
-        "supertest": "^6.1.3"
+        "supertest": "^6.1.4"
     },
     "browser": {
         "enketo/config": "./public/js/src/module/client-config",
@@ -134,8 +135,8 @@
         "public/js/src/enketo-webform-view.js",
         "public/js/src/enketo-offline-fallback.js"
     ],
-    "//": "While CI runs Node v12.21.0, v12.18.4 is currently the latest version which is able to run the full test suite without crashing",
     "volta": {
-        "node": "12.18.4"
+        "node": "16.6.1",
+        "npm": "6.14.14"
     }
 }
