--- a/package.json
+++ b/package.json
@@ -39,27 +39,27 @@
     "dependencies": {
         "aliasify": "^2.1.0",
         "basic-auth": "^2.0.1",
-        "body-parser": "^1.19.0",
+        "body-parser": "^1.19.1",
         "bristol": "^0.4.0",
         "busboy": "^0.3.1",
         "compression": "^1.7.4",
-        "cookie-parser": "^1.4.5",
+        "cookie-parser": "^1.4.6",
         "csurf": "^1.11.0",
         "db.js": "^0.15.0",
-        "debug": "^4.3.2",
+        "debug": "^4.3.3",
         "enketo-core": "6.0.2",
         "enketo-transformer": "2.1.1",
         "evp_bytestokey": "^1.0.3",
-        "express": "^4.17.1",
+        "express": "^4.17.2",
         "grunt": "^1.4.1",
         "grunt-env": "^1.0.1",
         "grunt-i18next": "^0.2.0",
         "grunt-shell-spawn": "^0.4.0",
         "i18next": "^20.6.1",
-        "i18next-browser-languagedetector": "^6.1.2",
-        "i18next-fs-backend": "^1.1.1",
-        "i18next-http-backend": "^1.3.1",
-        "i18next-http-middleware": "^3.1.4",
+        "i18next-browser-languagedetector": "^6.1.3",
+        "i18next-fs-backend": "^1.1.4",
+        "i18next-http-backend": "^1.3.2",
+        "i18next-http-middleware": "^3.1.5",
         "jquery": "^3.6.0",
         "jstransformer-markdown-it": "^2.1.0",
         "jszip": "^3.7.1",
@@ -67,11 +67,11 @@
         "load-grunt-tasks": "^5.1.0",
         "lodash": "^4.17.21",
         "morgan": "^1.10.0",
-        "node-forge": "^0.10.0",
+        "node-forge": "^1.2.1",
         "papaparse": "^5.3.1",
         "pkg-dir": "^5.0.0",
         "pug": "^3.0.2",
-        "puppeteer": "^10.4.0",
+        "puppeteer": "^13.1.2",
         "redis": "^3.1.2",
         "request": "^2.88.2",
         "request-filtering-agent": "^1.0.7",
@@ -86,10 +86,10 @@
         "@baladins/grunt-nodemon": "^0.4.6",
         "@types/db.js": "^0.14.7",
         "@types/express": "^4.17.13",
-        "@types/sinon": "^10.0.6",
+        "@types/sinon": "^10.0.9",
         "abortcontroller-polyfill": "^1.7.3",
         "bootstrap-datepicker": "1.9.0",
-        "chai": "^4.3.4",
+        "chai": "^4.3.6",
         "chai-as-promised": "^7.1.1",
         "docdash": "^1.2.0",
         "esbuild": "^0.12.29",
@@ -102,28 +102,28 @@
         "grunt-karma": "^4.0.2",
         "grunt-mocha-test": "^0.13.3",
         "grunt-sass": "^3.1.0",
-        "grunt-simple-nyc": "^3.0.1",
         "istanbul": "^0.4.5",
         "istanbul-lib-instrument": "^5.1.0",
         "istanbul-reporter-shield-badge": "^1.2.1",
-        "jsdoc": "^3.6.7",
+        "jsdoc": "^3.6.10",
         "jsdoc-ts-utils": "^2.0.1",
-        "karma": "^6.3.7",
+        "karma": "^6.3.12",
         "karma-chrome-launcher": "^3.1.0",
-        "karma-coverage": "^2.0.3",
+        "karma-coverage": "^2.1.0",
         "karma-esbuild": "^2.2.0",
         "karma-firefox-launcher": "^2.1.2",
         "karma-mocha": "^2.0.1",
         "karma-opera-launcher": "^1.0.0",
         "karma-safari-launcher": "^1.0.0",
         "karma-sinon-chai": "^2.0.2",
-        "mocha": "^9.1.3",
-        "nock": "^13.1.4",
-        "node-sass": "^6.0.1",
+        "mocha": "^9.2.0",
+        "nock": "^13.2.2",
+        "node-sass": "^7.0.1",
+        "nyc": "^15.1.0",
         "rimraf": "^3.0.2",
         "sinon": "^11.1.2",
         "sinon-chai": "^3.7.0",
-        "supertest": "^6.1.6"
+        "supertest": "^6.2.2"
     },
     "browser": {
         "enketo/config": "./public/js/src/module/client-config",
