--- a/config/default-config.json
+++ b/config/default-config.json
@@ -110,6 +110,7 @@
     "validate page": true,
     "payload limit": "100kb",
     "text field character limit": 2000,
+    "csrf cookie name": "__csrf",
     "frameguard deny": false,
     "no sniff": false,
     "hsts": {
